# g8e

./: .gitignore  .golangci.yml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  _config.yml  buf.gen.yaml  clean_operators.py  docker-compose.dev.yml  docker-compose.yml  fix.py  fix_readme.py  fix_scrubber.py  g8e  index.md  patch_schema.py  patch_test.py  reproduce_bug.py  rewrite_scrubbers.py  test_ast.py  test_ollama.py  test_output.txt  todo.txt  update_scrubber.py
components/g8ee/: .gitignore  Dockerfile  Dockerfile.test  PLAN-investigation-context-tool.md  entrypoint.sh  pyproject.toml  pyrightconfig.services.json  requirements.txt  test_results.txt  test_store.py
components/g8ee/app/: __init__.py  dependencies.py  errors.py  logging.py  main.py
components/g8ee/app/clients/: __init__.py  blob_client.py  db_client.py  http_client.py  kv_cache_client.py  pubsub_client.py
components/g8ee/app/constants/: __init__.py  action_type_mappings.py  agents.py  api_paths.py  channels.py  collections.py  errors.py  events.py  headers.py  intents.py  kv_keys.py  message_sender.py  paths.py  platform.py  prompts.py  settings.py  shared.py  status.py  tool_registry_pending.py
components/g8ee/app/db/: __init__.py  blob_service.py  db_service.py  kv_service.py
components/g8ee/app/evals/: __init__.py
components/g8ee/app/llm/: __init__.py  factory.py  llm_dataclasses.py  llm_schema.py  llm_types.py  prompts.py  provider.py  structured.py  thinking.py  utils.py
components/g8ee/app/middleware/: authorization.py
components/g8ee/app/models/: __init__.py  agent.py  agent_activity.py  api_keys.py  attachments.py  auth.py  base.py  cache.py  cases.py  chat_api.py  command_payloads.py  command_request_payloads.py  conversation.py  db_queries.py  errors.py  events.py  g8ed_client.py  grounding.py  health.py  http_context.py  infra.py  internal_api.py  investigations.py  mcp.py  memory.py  model_configs.py  operators.py  operators_bind.py  pubsub_messages.py  reputation.py  sessions.py  settings.py  ssh_inventory.py  state.py  tool_args.py  tool_results.py  triage_api.py  tribunal_commands.py  uap.py  version.py  (+1 more)
components/g8ee/app/prompts_data/: __init__.py  loader.py
components/g8ee/app/proto/: common_pb2.py  operator_pb2.py  operator_pb2_grpc.py  pubsub_pb2.py  pubsub_pb2_grpc.py
components/g8ee/app/routers/: __init__.py  chat_router.py  health_router.py  internal_router.py
components/g8ee/app/security/: __init__.py  auth.py  operator_command_validator.py  output_sanitizer.py  request_timestamp.py  sentinel_scrubber.py
components/g8ee/app/services/: __init__.py  protocols.py  service_factory.py
components/g8ee/app/storage/: __init__.py
components/g8ee/app/utils/: __init__.py  agent_persona_loader.py  aiohttp_session.py  auto_approved_validator.py  blacklist_validator.py  case_converter.py  command.py  envelope_builder.py  ids.py  interrogation.py  json_utils.py  keyed_lock.py  ledger_hash.py  merkle.py  path.py  safety.py  service_init.py  timestamp.py  validators.py  version.py  whitelist_validator.py
components/g8ee/config/: auto_approved.json  blacklist.json  whitelist.json
components/g8ee/evals/: README.md  docker-compose.evals.yml
components/g8ee/evals/gold_sets/: accuracy.json  benchmark.json  privacy.json
components/g8ee/evals/runner/: cli.py  client.py  fleet.py  scorer.py
components/g8ee/tests/: __init__.py  conftest.py  repro_tribunal_json.py
components/g8ee/tests/e2e/: conftest.py  test_operator_lifecycle.py
components/g8ee/tests/evals/: benchmark_gold_set.json  conftest.py  gold_set.json  metrics.py  privacy_gold_set.json  real_operator_fixture.py  reporter.py  shared.py  test_agent_accuracy.py  test_agent_benchmark.py  test_agent_privacy.py  test_agent_tool_loop.py  test_print_genai.py
components/g8ee/tests/fakes/: agent_helpers.py  async_helpers.py  builder.py  factories.py  fake_ai_response_analyzer.py  fake_approval_service.py  fake_db_service.py  fake_event_service.py  fake_execution_registry.py  fake_execution_service.py  fake_g8ed_client.py  fake_g8es_clients.py  fake_http_service.py  fake_investigation_service.py  fake_lfaa_service.py  fake_llm_provider.py  fake_memory_data_service.py  fake_operator_cache.py  fake_pubsub_service.py  fake_vsodb_clients.py  fake_web_search_provider.py  headers.py  test_fakes_protocol_conformance.py  tool_helpers.py
components/g8ee/tests/integration/: cleanup.py  conftest.py  test_agent_thinking_puzzle_integration.py  test_ai_context_gathering_integration.py  test_ai_services_integration.py  test_ai_tool_calls_integration.py  test_auto_approve_json_integration.py  test_chat_pipeline_chain_integrity.py  test_command_generator_with_commitment.py  test_g8e_http_context_integration.py  test_investigation_history_concurrency.py  test_kv_cache_auth_integration.py  test_ollama_outbound_url.py  test_operator_history_concurrency.py  test_operator_wire_tools_integration.py  test_reputation_pipeline.py  test_settings_overlay_integration.py  test_sse_event_contract_integration.py  test_stream_operator_dispatch.py  (+5 more)
evals/: .gitignore  pyproject.toml
evals/g8e_evals/: __init__.py  __main__.py  agent_trail_renderer.py  cli.py  harness.py  llm_client.py  models.py  tls.py  transport.py  uap_utils.py
evals/g8e_evals/proto/: common_pb2.py  operator_pb2.py
evals/g8e_evals/receipts/: collector.py  verify.py
evals/g8e_evals/report/: aggregate.py  cli_renderer.py
evals/g8e_evals/sut/: answer_only.py  g8ee_chat.py  wire.py
evals/tests/: byo_client_parity.sh  conftest.py  test_auth_wiring_parity.py  test_g8ee_chat_sut.py  test_ifeval_smoke.py  test_sse_wire.py  test_sut_no_stub.py  test_tls.py
protocol/python/: pyproject.toml
protocol/python/g8e_protocol/: __init__.py  constants.py  paths.py
services/g8ee/: Makefile  entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements.txt  test_results.txt  test_results_2.txt
services/g8ee/app/: dependencies.py  errors.py  logging.py  main.py
services/g8ee/config/: auto_approved.json
services/g8ee/tests/: conftest.py
(+3009 files in other folders)
