[project]
name = "g8e-evals"
version = "0.1.0"
description = "High-fidelity AI evaluations with signed ActionReceipts"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pynacl>=1.5.0",
    "pydantic>=2.7.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "protobuf>=5.26.1",
]

[project.scripts]
g8e-evals = "g8e_evals.cli:main"

[tool.setuptools]
packages = ["g8e_evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
