[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "g8ee"
version = "0.1.4"
description = "g8e Engine - AI engine for g8e infrastructure operations"
requires-python = ">=3.12"

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

# Async configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# Test markers for categorization
markers = [
    "unit: Unit tests (fast, isolated, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (full application flow)",
    "slow: Tests that take longer than 1 second",
    "smoke: Quick smoke tests for CI",
    "ai: Tests involving AI/LLM functionality",
    "ai_integration: AI integration tests requiring real LLM API calls",
    "aws: Tests requiring LocalStack AWS emulation",
    "intent_workflow: Tests for intent-based permission workflow with g8eEngine",
    "requires_api: Tests requiring a live external API (e.g. Google Search API)",
    "requires_web_search: Tests requiring web search configuration (search.enabled, project_id, engine_id, api_key)",
    "agent_eval: AI agent accuracy evaluation tests using a Judge LLM",
    "agent_benchmark: Deterministic agent benchmark tests grading tool call payloads with BenchmarkJudge",
    "agent_privacy: Privacy evaluation tests for Sentinel PII redaction across three egress layers",
    "thinking: Tests requiring LLM thinking/reasoning capability",
    "tools: Tests requiring LLM tool calling/function calling capability",
    "operator_wire: Integration tests that publish tool-call events directly to a live g8ep operator via PubSub (no AI, no approval gate)",
]

# Output and logging
addopts = [
    "--tb=short",
    "--no-header",
    "--strict-markers",
    "--strict-config",
    "-q",
]


# Warning filters - treat all warnings as errors except SDK-internal issues
filterwarnings = [
    "error",
    "ignore:Inheritance class .* from ClientSession is discouraged:DeprecationWarning:aiohttp.client",
    "ignore:Unclosed client session:ResourceWarning",
    "ignore:Unclosed connector:ResourceWarning",
    "ignore:unclosed transport:ResourceWarning",
    "ignore:unclosed <socket.socket:ResourceWarning",
]

# Timeout for tests (prevents hanging)
timeout = 60
timeout_method = "signal"

# Cache directory — ~/ is writable by the g8e user
cache_dir = "/home/g8e/.pytest_cache"

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
data_file = "/home/g8e/.coverage"
source = ["app"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/__main__.py",
    "*/conftest.py",
    "*/.pytest_cache/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "class .*\\bProtocol\\):",
]

# Terminal output formatting
[tool.coverage.term]
show_missing = true
skip_covered = false
skip_empty = true

[tool.coverage.html]
directory = "/home/g8e/coverage-reports/g8ee"
title = "g8ee Test Coverage"

[tool.coverage.json]
output = "/home/g8e/coverage-reports/g8ee/coverage.json"

# ============================================================================
# Ruff Configuration (Linter & Formatter)
# ============================================================================
[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Use of assert
    "ARG",    # Unused function arguments
    "PLR2004", # Magic values in tests are fine
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ============================================================================
# MyPy Configuration (Type Checking)
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "google.*",
    "google.cloud.*",
    "google.genai.*",
]
ignore_missing_imports = true

