[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "g8ee"
version = "0.2.5"
description = "g8e Engine - AI engine for g8e infrastructure operations"
requires-python = ">=3.12"

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

# Async configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# Test markers for categorization
markers = [
    "unit: Unit tests (fast, isolated, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "ai_integration: AI integration tests requiring real LLM API calls",
    "slow: Tests that take longer than 1 second",
    "requires_web_search: Tests requiring web search configuration (search.enabled, project_id, engine_id, api_key)",
    "e2e: End-to-end tests (full application flow)",
    "smoke: Quick smoke tests for CI",
    "ai: Tests involving AI/LLM functionality",
    "aws: Tests requiring LocalStack AWS emulation",
    "intent_workflow: Tests for intent-based permission workflow with g8eEngine",
    "requires_api: Tests requiring a live external API (e.g. Google Search API)",
    "thinking: Tests requiring LLM thinking/reasoning capability",
    "tools: Tests requiring LLM tool calling/function calling capability",
    "operator_wire: Integration tests that publish tool-call events directly to a live Operator via PubSub (no AI, no approval gate)",
    "requires_operator: Integration tests that require a live Operator on port 9000 (e.g. for DB or KV access)",
]

# Output and logging
addopts = [
    "--tb=short",
    "--no-header",
    "--strict-markers",
    "--strict-config",
    "-q",
]


# Warning filters - treat all warnings as errors except SDK-internal issues
filterwarnings = [
    "error",
    "ignore:Inheritance class .* from ClientSession is discouraged:DeprecationWarning:aiohttp.client",
    "ignore:Unclosed client session:ResourceWarning",
    "ignore:Unclosed connector:ResourceWarning",
    "ignore:unclosed transport:ResourceWarning",
    "ignore:unclosed <socket.socket:ResourceWarning",
]

# Timeout for tests (prevents hanging)
timeout = 60
timeout_method = "signal"

    # Cache directory - relative path works in both container and host contexts
    cache_dir = ".pytest_cache"

    # ============================================================================
    # Coverage Configuration
    # ============================================================================
    [tool.coverage.run]
    data_file = ".coverage"
    source = ["app"]
    branch = true
    parallel = true
    omit = [
        "*/tests/*",
        "*/__init__.py",
        "*/__main__.py",
        "*/conftest.py",
        "*/.pytest_cache/*",
        "*/site-packages/*",
    ]

    [tool.coverage.report]
    precision = 2
    show_missing = true
    skip_covered = false
    skip_empty = true
    sort = "Cover"
    exclude_lines = [
        "pragma: no cover",
        "def __str__",
        "if __name__ == .__main__.:",
        "@abstractmethod",
        "class .*\\bProtocol\\):",
    ]

    # Terminal output formatting
    [tool.coverage.term]
    show_missing = true
    skip_covered = false
    skip_empty = true

    [tool.coverage.html]
    directory = "coverage-reports/g8ee"
    title = "g8ee Test Coverage"

    [tool.coverage.json]
    output = "coverage-reports/g8ee/coverage.json"

    # ============================================================================
    # Ruff Configuration (Linter & Formatter)
    # ============================================================================
    [tool.ruff]
    target-version = "py313"
    line-length = 100
    indent-width = 4
    cache-dir = ".ruff_cache"

    [tool.ruff.lint]
    select = [
        "E",      # pycodestyle errors
        "W",      # pycodestyle warnings
        "F",      # pyflakes
        "I",      # isort
        "N",      # pep8-naming
        "UP",     # pyupgrade
        "YTT",    # flake8-2020
        "ASYNC",  # flake8-async
        "B",      # flake8-bugbear
        "A",      # flake8-builtins
        "C4",     # flake8-comprehensions
        "DTZ",    # flake8-datetimez
        "T10",    # flake8-debugger
        "ISC",    # flake8-implicit-str-concat
        "ICN",    # flake8-import-conventions
        "G",      # flake8-logging-format
        "PIE",    # flake8-pie
        "T20",    # flake8-print
        "PT",     # flake8-pytest-style
        "Q",      # flake8-quotes
        "RSE",    # flake8-raise
        "RET",    # flake8-return
        "SLF",    # flake8-self
        "SIM",    # flake8-simplify
        "TID",    # flake8-tidy-imports
        "ARG",    # flake8-unused-arguments
        "PTH",    # flake8-use-pathlib
        "ERA",    # eradicate
        "PL",     # pylint
        "PERF",   # perflint
        "RUF",    # ruff-specific rules
    ]
    ignore = [
        "E501",   # Line too long (handled by formatter)
        "PLR0913", # Too many arguments
        "PLR2004", # Magic value used in comparison
        "I001",    # Import sorting (handled by Ruff format)
        "B008",    # FastAPI Depends() in defaults (idiomatic pattern)
        "PLR0911", # Too many return statements
        "PLR0912", # Too many branches
        "PLR0915", # Too many statements
        "PLW0603", # Global statement is used for singleton-like validators
        "B904",    # Raise from err (standardizing this is low priority)
        "ERA001",  # Commented-out code (often preserved for context)
        "PTH",     # Use pathlib (low priority refactor)
        "ASYNC",   # Asyncio checks (many false positives or low impact in tests)
        "RUF012",  # Mutable class attribute (common in pytest classes)
        "B017",    # Blind exception assert
        "RUF100",  # Unused noqa (cleaning these up is low priority)
        "G201",    # logger.exception vs logger.error(..., exc_info=True)
        "ARG",     # Unused arguments (often required by interfaces)
        "E402",    # Module level import not at top
        "PLC0415", # Local imports (often used to avoid circular dependencies)
        "PLW2901", # Loop variable overwritten
        "DTZ",     # Datetime checks
        "PERF401", # List comprehension
        "B007",    # Loop control variable not used
        "G004",    # Logging statement uses f-string
        "SIM",     # Simplify checks (SIM102, SIM108, SIM113, etc.)
        "F821",    # Undefined name (common in complex type hints/circular imports)
        "N8",      # Naming conventions (N801, N802, N806, N813, etc.)
        "RUF002",  # Ambiguous docstring characters
        "SLF001",  # Private member access (ubiquitous in proto files and internal state)
        "F401",    # Unused import (common in __init__.py for exports)
        "UP007",   # Union to pipe (modern Python style, but Union is ubiquitous)
        "PERF403", # Dict comprehension
        "B027",    # Empty method in ABC without abstract decorator
    ]

    [tool.ruff.lint.per-file-ignores]
    "tests/**/*.py" = [
        "S101",    # Use of assert
        "ARG",     # Unused function arguments
        "PLR2004", # Magic values in tests are fine
        "SLF001",  # Private member access in tests
        "PLC0415", # Imports in tests can be local for mocking
        "PT011",   # Broad pytest.raises is common in tests
        "E402",    # Module level import not at top (often needed in tests)
        "E701",    # Multiple statements on one line
        "SIM",     # Simplify (nested with, etc.)
        "RUF043",  # Regex characters in match=
        "PT012",   # Pytest.raises block complexity
        "PERF401", # List comprehension (often clearer to use loop in tests)
        "N",       # Naming conventions (often violated in tests/fakes)
        "G",       # Logging format
        "B018",    # Useless expression (common in mocks)
        "F821",    # Undefined name (common in type hints or dynamic mocks)
        "DTZ",     # Datetime without tz
        "RUF059",  # Unused unpacked variable
    ]

    [tool.ruff.lint.isort]
    known-first-party = ["app"]

    [tool.ruff.format]
    quote-style = "double"
    indent-style = "space"
    line-ending = "auto"

# ============================================================================
# MyPy Configuration (Type Checking)
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "google.*",
    "google.cloud.*",
    "google.genai.*",
]
ignore_missing_imports = true

